# psiphy

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tutorials.html  update_pypi.sh
.doctrees/: environment.pickle  index.doctree  tutorials.doctree
.doctrees/api/: forecasting.doctree  mcmc.doctree  plotting.doctree  sbi.doctree  toy_models.doctree  utils.doctree
.doctrees/examples/: fisher_analysis.doctree  importance_sampling_tutorial.doctree  toy_models_overview.doctree
.doctrees/nbsphinx/examples/: fisher_analysis.ipynb  importance_sampling_tutorial.ipynb  toy_models_overview.ipynb
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/psi/plotting/: corner.html  mcmc_chains.html
_modules/psi/toy_models/: gaussian.html  line_fitting.html
_modules/psi/utils/: distances.html  helpers.html  kernel_density.html  sampling_space.html
_modules/psiphy/forecasting/: fisher.html
_modules/psiphy/mcmc/: importance_sampling.html
_modules/psiphy/plotting/: corner.html  mcmc_chains.html
_modules/psiphy/sbi/: abc_gp.html  bolfi.html  lfire.html  rejection_abc.html  sre.html
_modules/psiphy/toy_models/: cosmological.html  gaussian.html  line_fitting.html  lotka_volterra.html  ma2.html
_modules/psiphy/utils/: distances.html  (+3 more)
_sources/: index.rst.txt  tutorials.rst.txt
_sources/api/: forecasting.rst.txt  mcmc.rst.txt  plotting.rst.txt  toy_models.rst.txt  utils.rst.txt
_sources/examples/: importance_sampling_tutorial.ipynb.txt  toy_models_overview.ipynb.txt
api/: forecasting.html  mcmc.html  plotting.html  sbi.html  toy_models.html  utils.html
docs/: conf.py  index.rst  tutorials.rst
docs/api/: forecasting.rst  mcmc.rst  plotting.rst  sbi.rst  toy_models.rst  utils.rst
examples/: fisher_analysis.html  fisher_analysis.ipynb  importance_sampling_tutorial.html  importance_sampling_tutorial.ipynb  toy_models_overview.html  toy_models_overview.ipynb
src/psi/: __init__.py
src/psiphy/: __init__.py
tests/: test_importance_sampling.py  test_imports.py  test_toy_models.py  test_utils.py
(+33 files in other folders)
